--- a/remotetea/build.xml
+++ b/remotetea/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-  $Header: /home/harald/repos/remotetea.sf.net/remotetea/build.xml,v 1.5 2006/03/18 18:28:18 haraldalbrecht Exp $
+  $Header: /home/harald/repos/remotetea.sf.net/remotetea/build.xml,v 1.6 2007/05/29 19:45:14 haraldalbrecht Exp $
   
   build.xml - contains the ANT rules for building Remote Tea
   
@@ -133,6 +133,8 @@
 			  dir="${srcDir}/tests/org/acplt/oncrpc/jrpcgen"
 			  fork="yes">
 			<arg value="-verbose"/>
+			<arg value="-ser"/>
+			<arg value="-bean"/>
 			<arg value="-p"/>
 			<arg value="tests.org.acplt.oncrpc.jrpcgen"/>
 			<arg value="-nobackup"/>
