--- a/remotetea/maven-plugin/pom.xml
+++ b/remotetea/maven-plugin/pom.xml
@@ -7,13 +7,21 @@
 		<version>1.1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>remotetea-maven-plugin</artifactId>
-	<name>Remote Tea :: Maven plugin</name>
 	<packaging>maven-plugin</packaging>
+	<name>Remote Tea : ONC/RPC Maven plugin</name>
+	<description>A Maven Plugin providing access to the source generator (jrpcgen) in the Maven life cycle phase 'generate-sources'.</description>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
-			<version>2.0</version>
+			<version>3.2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+			<version>3.4</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.acplt</groupId>
@@ -21,4 +29,19 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.4</version>
+				<executions>
+					<execution>
+						<id>default-descriptor</id>
+						<phase>process-classes</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
