--- a/remotetea/pom.xml
+++ b/remotetea/pom.xml
@@ -7,11 +7,110 @@
 	<version>1.1.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Remote Tea</name>
+	<description>A fully fledged implementation of the ONC/RPC protocol including a source generator, a port mapper and a Maven plugin for source generation in a Maven build.</description>
 	<url>http://sourceforge.net/projects/remotetea/</url>
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License</name>
+			<url>http://www.gnu.org/licenses/lgpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<connection>scm:git:http://git.code.sf.net/p/remotetea/code</connection>
+		<developerConnection>scm:git:https://git.code.sf.net/p/remotetea/code</developerConnection>
+		<url>http://sourceforge.net/p/remotetea/code/ci/master/tree/</url>
+	</scm>
+	<developers>
+		<developer>
+			<id>haraldalbrecht</id>
+			<name>Harald Albrecht</name>
+			<email>haraldalbrecht@users.sourceforge.net</email>
+		</developer>
+		<developer>
+			<id>hwirths</id>
+			<name>Harald Wirths</name>
+			<email>hwirths@nde.ag</email>
+			<organization>NDE AG</organization>
+			<organizationUrl>http://nde.ag</organizationUrl>
+		</developer>
+	</developers>
 	<modules>
 		<module>oncrpc</module>
 		<module>jrpcgen</module>
 		<module>jportmap</module>
 		<module>maven-plugin</module>
 	</modules>
+	<distributionManagement>
+		<repository>
+			<id>${remotetea.release.repository.id}</id>
+			<url>${remotetea.release.repository.url}</url>
+		</repository>
+		<snapshotRepository>
+			<id>${remotetea.snapshot.repository.id}</id>
+			<url>${remotetea.snapshot.repository.url}</url>
+		</snapshotRepository>
+	</distributionManagement>
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.4</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.10.1</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
