--- a/remotetea/jportmap/pom.xml
+++ b/remotetea/jportmap/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.acplt</groupId>
+		<groupId>org.acplt.remotetea</groupId>
 		<artifactId>remotetea</artifactId>
 		<version>1.1.1-SNAPSHOT</version>
 	</parent>
@@ -10,7 +10,7 @@
 	<name>Remote Tea : ONC/RPC port mapper</name>
 	<dependencies>
 		<dependency>
-			<groupId>org.acplt</groupId>
+			<groupId>org.acplt.remotetea</groupId>
 			<artifactId>remotetea-oncrpc</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
