--- a/remotetea/maven-plugin/pom.xml
+++ b/remotetea/maven-plugin/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.acplt</groupId>
+		<groupId>org.acplt.remotetea</groupId>
 		<artifactId>remotetea</artifactId>
 		<version>1.1.1-SNAPSHOT</version>
 	</parent>
@@ -24,7 +24,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.acplt</groupId>
+			<groupId>org.acplt.remotetea</groupId>
 			<artifactId>remotetea-jrpcgen</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
