--- a/remotetea/oncrpc/pom.xml
+++ b/remotetea/oncrpc/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.acplt.remotetea</groupId>
-    <artifactId>remotetea</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>remotetea-oncrpc</artifactId>
-  <name>Remote Tea : ONC/RPC runtime</name>
-  <description>The runtime environment for ONC/RPC programs based on Remote Tea.</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.acplt.remotetea</groupId>
+		<artifactId>remotetea</artifactId>
+		<version>1.1.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>remotetea-oncrpc</artifactId>
+	<name>Remote Tea : ONC/RPC runtime</name>
+	<description>The runtime environment for ONC/RPC programs based on Remote Tea.</description>
 </project>
