--- a/remotetea/oncrpc/pom.xml
+++ b/remotetea/oncrpc/pom.xml
@@ -8,5 +8,26 @@
 	</parent>
 	<artifactId>remotetea-oncrpc</artifactId>
 	<name>Remote Tea : ONC/RPC runtime</name>
-	<description>The runtime environment for ONC/RPC programs based on Remote Tea.</description>
+	<description>The runtime environment for ONC/RPC programs, both client and server side.</description>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-remote-resources-plugin</artifactId>
+				<version>1.5</version>
+				<configuration>
+					<resourceBundles>
+						<resourceBundle>org.acplt.remotetea:remotetea-information:${project.version}</resourceBundle>
+					</resourceBundles>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>process</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
