--- a/remotetea/jrpcgen/pom.xml
+++ b/remotetea/jrpcgen/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.acplt.remotetea</groupId>
 		<artifactId>remotetea</artifactId>
-		<version>1.1.1-SNAPSHOT</version>
+		<version>1.1.1</version>
 	</parent>
 	<artifactId>remotetea-jrpcgen</artifactId>
 	<name>Remote Tea : ONC/RPC source generator</name>
@@ -15,7 +15,7 @@
 			<version>1.9.4</version>
 		</dependency>
 	</dependencies>
-	<description>The source generator for ONC/RPC programs analogous to <em>rpcgen</em> of Sun.</description>
+	<description>The source generator for ONC/RPC programs analogous to 'rpcgen' of Sun.</description>
 	<build>
 		<plugins>
 			<plugin>
