--- a/remotetea/information/pom.xml
+++ b/remotetea/information/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.acplt.remotetea</groupId>
 		<artifactId>remotetea</artifactId>
-		<version>1.1.1</version>
+		<version>1.1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>remotetea-information</artifactId>
 	<name>Remote Tea : Project Information</name>
