--- a/remotetea/oncrpc/pom.xml
+++ b/remotetea/oncrpc/pom.xml
@@ -4,11 +4,12 @@
 	<parent>
 		<groupId>org.acplt.remotetea</groupId>
 		<artifactId>remotetea</artifactId>
-		<version>1.1.2-SNAPSHOT</version>
+		<version>1.1.2</version>
 	</parent>
 	<artifactId>remotetea-oncrpc</artifactId>
 	<name>Remote Tea : ONC/RPC runtime</name>
 	<description>The runtime environment for ONC/RPC programs, both client and server side.</description>
+	<packaging>bundle</packaging>
 	<build>
 		<plugins>
 			<plugin>
@@ -27,6 +28,23 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-Name>${project.artifactId}</Bundle-Name>
+						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+						<Export-Package>org.acplt.oncrpc</Export-Package>
+						<Import-Package>
+						 *
+						</Import-Package>
+						<Implementation-Title>oncrpc</Implementation-Title>
+						<Implementation-Version>${project.version}</Implementation-Version>
+					</instructions>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
