--- a/remotetea/pom.xml
+++ b/remotetea/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.acplt.remotetea</groupId>
 	<artifactId>remotetea</artifactId>
-	<version>1.1.2-SNAPSHOT</version>
+	<version>1.1.2</version>
 	<packaging>pom</packaging>
 	<name>Remote Tea</name>
 	<description>A fully fledged implementation of the ONC/RPC protocol including a source generator, a port mapper and a Maven plugin for source generation in a Maven build.</description>
@@ -139,6 +139,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.4</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.3.7</version>
 			</plugin>
 		</plugins>
 	</build>
