--- a/remotetea/build.xml
+++ b/remotetea/build.xml
@@ -16,7 +16,7 @@
 	<property name="distDir" value="dist" />
 	<property name="infoDir" value="information/src/main/resources/META-INF" />
 	
-	<property name="distVersion" value="1.1.2" />
+	<property name="distVersion" value="1.1.3-SNAPSHOT" />
 	
 	<target name="clean" description="cleans up all build artifacts">
 		<delete dir="${distDir}"/>
