--- a/remotetea/maven-plugin/pom.xml
+++ b/remotetea/maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.acplt.remotetea</groupId>
 		<artifactId>remotetea</artifactId>
-		<version>1.1.2</version>
+		<version>1.1.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>remotetea-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
