--- a/remotetea/pom.xml
+++ b/remotetea/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.acplt.remotetea</groupId>
 	<artifactId>remotetea</artifactId>
-	<version>1.1.2</version>
+	<version>1.1.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Remote Tea</name>
 	<description>A fully fledged implementation of the ONC/RPC protocol including a source generator, a port mapper and a Maven plugin for source generation in a Maven build.</description>
